syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message DislikeInfo {
  string dislikeReason = 1;
  uint32 dislikeId = 2;
  string extra = 3;
}